[package]
name = "ticktacktoe"
version = "0.1.0"
authors = ["Jack Mordaunt <jackmordaunt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "ticktacktoe"
path = "src/main.rs"

[dependencies]
ggez = "0.5.1"
clap = "2.33.0"
laminar = "0.3.0"
